Added JMetro, Added seed files. **DELETE** old yunzog.db. A new one will be generated